--- a/Marvel-With-Gulp/src/sass/_expert_page.scss
+++ b/Marvel-With-Gulp/src/sass/_expert_page.scss
@@ -150,3 +150,85 @@
   margin-top: 6px;
 
 }
+
+
+
+@media (min-width:1025px) and (max-width:1199px) {
+
+  .expert_page h2 {
+    padding-top: 150px;
+  }
+
+  .expert_page{
+    padding-bottom: 250px;
+  }
+
+  .expert_content_blocks {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .expert_content_blocks:first-child {
+    padding-top: 110px;
+  }
+
+  .expert_block:hover h5 {
+    padding-top: 60px;
+  }
+
+  .expert_block:hover p {
+    padding-top: 50px;
+    padding-bottom: 70px;
+  }
+
+}
+
+
+@media (min-width:769px) and (max-width:1024px) {
+  /*   Eigth Content      */
+
+  .expert_page {
+    padding-bottom: 150px;
+  }
+
+  .expert_page h2 {
+    padding-top: 100px;
+  }
+
+  .expert_content_blocks {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 30px;
+    padding-top: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .expert_block:hover h5 {
+    font-size: 22px;
+    padding-top: 40px;
+  }
+
+  .expert_block:hover h6 {
+    font-size: 15px;
+    padding-top: 10px;
+  }
+
+  .expert_block:hover p {
+    font: 11px $font-basic;
+    color: $color_for_dark_grey;
+    padding-top: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 40px;
+    color: #000;
+  }
+
+  .expert_block .social_icons a{
+    margin-right: 15px;
+  }
+
+}
