--- a/Marvel-With-Gulp/src/sass/_features_page.scss
+++ b/Marvel-With-Gulp/src/sass/_features_page.scss
@@ -70,3 +70,26 @@
 .fourth_similar_block_circle i{
   padding: 25px;
 }
+
+@media (min-width:1025px) and (max-width:1199px) {}
+
+@media (min-width:769px) and (max-width:1024px) {
+
+  /* Fourth Block  */
+
+.features_page{
+padding-bottom: 100px;
+}
+
+.fourth_content_blocks{
+padding-top: 40px;
+padding-left: 20px;
+padding-right: 20px;
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-column-gap: 30px;
+grid-row-gap: 50px;
+text-align: left;
+}
+
+}
