--- a/Marvel-With-Gulp/src/sass/_impressed_by_our_work.scss
+++ b/Marvel-With-Gulp/src/sass/_impressed_by_our_work.scss
@@ -41,3 +41,26 @@
   background-color: $color_for_yellow;
   margin-left: 0px;
 }
+
+@media (min-width:1025px) and (max-width:1199px) {}
+
+
+@media (min-width:769px) and (max-width:1024px) {
+  /* Nine Block   */
+
+  .impressed_by_our_work h3{
+    padding-top: 50px;
+  }
+
+  .impressed_by_our_work p{
+    padding-bottom: 30px;
+  }
+
+  .form-main-button button{
+    text-transform: uppercase;
+    color: #000;
+    font: 13px $font-lato;
+    font-weight: 700;
+    margin-bottom: 60px;
+  }
+}
