--- a/Marvel-With-Gulp/src/sass/_responsive_page.scss
+++ b/Marvel-With-Gulp/src/sass/_responsive_page.scss
@@ -60,3 +60,46 @@ margin-top: -46px;
 .responsive_page .form-block-button{
   padding-bottom: 116px;
 }
+
+
+@media (min-width:1025px) and (max-width:1199px) {
+
+  .responsive_page{
+    padding-left: 20px;
+  }
+}
+
+
+
+@media (min-width:769px) and (max-width:1024px) {
+
+  /* Second Block   */
+
+.responsive_page h2{
+padding-top: 75px;
+margin-left: 13px;
+}
+
+.responsive_page h4{
+font-weight: 800;
+margin-left: 20px;
+}
+
+.responsive_page p{
+max-width: 500px;
+margin-left: 20px;
+}
+
+.ul_second_block_list{
+margin-top: 40px;
+margin-left: 20px;
+}
+
+.responsive_page .form-block-button button{
+margin-left: 20px;
+}
+
+.responsive_page .form-block-button{
+padding-bottom: 80px;
+}
+}
