--- a/Marvel-With-Gulp/src/sass/_expert_page.scss
+++ b/Marvel-With-Gulp/src/sass/_expert_page.scss
@@ -230,5 +230,103 @@
   .expert_block .social_icons a{
     margin-right: 15px;
   }
+}
 
+
+@media (min-width:426px) and (max-width:768px) {
+  /*   Eigth Content      */
+
+  .expert_page {
+    padding-bottom: 80px;
+  }
+
+  .expert_page h2 {
+    padding-top: 80px;
+  }
+
+  .expert_content_blocks {
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 30px;
+    padding-top: 30px;
+  }
+
+  .expert_block:hover h5 {
+    padding-top: 30px;
+    font: 19px $font-article;
+    font-weight: bolder;
+  }
+
+  .expert_block:hover h6 {
+    font: 15px $font-article;
+    font-weight: bolder;
+  }
+
+  .expert_block:hover p {
+    font: 11px $font-basic;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-weight: 700;
+    padding-bottom: 50px;
+  }
+
+  .expert_block .social_icons{
+    margin-top: 20px;
+  }
+
+  .expert_block .social_icons a{
+    margin-right: 15px;
+  }
+}
+
+@media (max-width:425px) {
+  /*   Eigth Content      */
+
+  .expert_page {
+    padding-bottom: 40px;
+  }
+
+  .expert_page h2 {
+    padding-top: 60px;
+  }
+
+  .expert_content_blocks {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 30px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 40px;
+  }
+
+  .expert_block:hover h5 {
+    padding-top: 35px;
+    font: 19px $font-article;
+    font-weight: bolder;
+  }
+
+  .expert_block:hover h6 {
+    font: 15px $font-article;
+    font-weight: bolder;
+  }
+
+  .expert_block:hover p {
+    font: 11px $font-basic;
+    padding-top: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-weight: 700;
+    padding-bottom: 80px;
+  }
+
+
+  .expert_block .social_icons i{
+    font-size: 16px;
+  }
+
+
+  .expert_block .social_icons a{
+    margin-right: 18px;
+  }
 }
