--- a/Marvel-With-Gulp/src/sass/_footer.scss
+++ b/Marvel-With-Gulp/src/sass/_footer.scss
@@ -135,5 +135,78 @@
   .flang_content_footer p{
     padding-bottom: 45px;
   }
-  
+
+}
+
+
+@media (min-width:426px) and (max-width:768px) {
+  /*  Footer   */
+
+
+  .footer_map p{
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font: 22px $font-article;
+    font-weight: bolder;
+  }
+
+  .main_content_footer{
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-column-gap: 15px;
+    text-align: center;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .footer_social_icons i{
+    font-size: 16px;
+    padding-top: 5px;
+  }
+
+  .footer_social_icons a{
+    margin-right: 20px;
+  }
+
+  .bottom_footer{
+    margin-top: -1px;
+  }
+}
+
+@media (max-width:425px) {
+  /*  Footer   */
+
+  .footer_map p{
+    padding-top: 25px;
+    padding-bottom: 25px;
+    font: 18px $font-article;
+    font-weight: bolder;
+  }
+
+  .main_content_footer{
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-column-gap: 12px;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+
+  .footer_social_icons i{
+    font-size: 15px;
+    padding-top: 5px;
+  }
+
+  .footer_social_icons a{
+    margin-right: 15px;
+  }
+
+  .footer_circle{
+    margin-top: 20px;
+  }
+
+  .flang_content_footer .footer_circle i{
+    font-size: 20px;
+  }
+
+  .flang_content_footer p{
+    padding-bottom: 25px;
+  }
 }
