--- a/Marvel-With-Gulp/src/sass/_impressed_by_our_work.scss
+++ b/Marvel-With-Gulp/src/sass/_impressed_by_our_work.scss
@@ -64,3 +64,51 @@
     margin-bottom: 60px;
   }
 }
+
+@media (min-width:426px) and (max-width:768px) {
+  /* Nine Block   */
+
+  .impressed_by_our_work h3{
+    padding-top: 40px;
+    font: 24px $font-lato;
+    font-weight: bolder;
+  }
+
+  .impressed_by_our_work p{
+    padding-bottom: 20px;
+  }
+
+  .form-main-button button{
+    font: 12px $font-lato;
+    font-weight: 700;
+    margin-bottom: 40px;
+    width: 150px;
+  }
+}
+
+@media (max-width:425px) {
+  /* Nine Block   */
+
+  .impressed_by_our_work h3{
+    padding-top: 40px;
+    font: 20px $font-lato;
+    font-weight: bolder;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+
+  .impressed_by_our_work p{
+    font: 12px $font-basic;
+    padding-bottom: 20px;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+
+  .form-main-button button{
+    font: 11px $font-lato;
+    font-weight: 700;
+    margin-bottom: 45px;
+    width: 125px;
+
+  }
+}
