--- a/Marvel-With-Gulp/src/sass/_pricing_page.scss
+++ b/Marvel-With-Gulp/src/sass/_pricing_page.scss
@@ -182,3 +182,73 @@ padding-bottom: 107px;
     width: 100%;
   }
 }
+
+
+@media (min-width:426px) and (max-width:768px) {
+
+  /*  Seven Content  */
+
+  .seven_price_blocks{
+    padding-top: 50px;
+    grid-template-columns: 1fr;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .form-price_bottom-button button{
+    width: 100%;
+  }
+}
+
+@media (max-width:425px) {
+  /*  Seven Content  */
+
+  .seven_price_blocks{
+    padding-top: 20px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row-gap: 30px;
+  }
+
+
+
+  .grey_top_price_block p{
+    font: 15px $font-basic;
+    padding-top: 10px;
+    padding-bottom: 12px;
+    color: $color_for_h1;
+  }
+
+  .price_block:nth-child(2){
+    margin-top: -40px;
+  }
+
+  .top_content_price_block h6{
+    padding-top: 25px;
+    padding-bottom: 25px;
+    font: 18px $font-poppins;
+    font-weight: 500;
+  }
+
+  .top_content_price_block p:last-child{
+    padding-bottom: 40px;
+  }
+
+  .price_per_month{
+    display: flex;
+    justify-content: center;
+  }
+
+  .main_content_price_block{
+    padding-top: 0px;
+  }
+
+
+  .form-price_bottom-button{
+  padding-bottom: 65px;
+  }
+
+  .form-price_bottom-button button{
+    width: 100%;
+  }
+}
